--- a/random-numbers/app/src/main/res/layout/activity_main.xml
+++ b/random-numbers/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zomaotoko.randomnumbers.MainActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#FFF">
+        <LinearLayout
+            android:id="@+id/titleBar"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal"
+            android:background="#aaa"
+            android:gravity="center_vertical">
+            <ImageButton
+                android:id="@+id/titleBarButton"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:background="#f00"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginLeft="4dp"
+                android:textSize="24sp"
+                android:textColor="#000"
+                android:fontFamily="sans-serif"
+                android:gravity="center_vertical"
+                android:text="Random numbers"/>
 
+        </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+        <fragment
+            android:id="@+id/generateNumbersFragment"
+            class="com.zomaotoko.randomnumbers.GenerateNumberFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/menuLayout"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#F00">
+
+        </ListView>
+    </LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
