--- a/random-numbers/app/src/main/res/values/colors.xml
+++ b/random-numbers/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="colorTitleBar">#FFFFFF</color>
+    <color name="colorFragmentBg">#F1F1F1</color>
+    <color name="colorMenuDrawerBg">#FFFFFF</color>
 </resources>
