--- a/random-numbers/app/src/main/res/layout/fragment_generate_number.xml
+++ b/random-numbers/app/src/main/res/layout/fragment_generate_number.xml
@@ -1,12 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorFragmentBg">
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorFragmentBg">
-
-    </RelativeLayout>
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
+        <TextView
+            android:id="@+id/numberTxt"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="60dp"
+            android:gravity="center_vertical|center_horizontal"
+            android:elevation="2dp"
+            android:fontFamily="sans-serif"
+            android:textSize="24sp"
+            android:textColor="#000"
+            android:background="#FFFFFF"/>
+        <Button
+            android:id="@+id/generateNumberBtn"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="40dp" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
