--- a/random-numbers/app/src/main/res/layout/activity_main.xml
+++ b/random-numbers/app/src/main/res/layout/activity_main.xml
@@ -55,17 +55,44 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:layout_marginStart="8dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:gravity="center_vertical"
             android:textColor="#000"
             android:textSize="24sp"
             android:fontFamily="sans-serif"
             android:text="@string/menu_title"
             />
-        <ListView
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="-1dp"
+            android:background="@android:color/darker_gray"/>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#F00"/>
+            android:layout_marginTop="48dp">
+            <RelativeLayout
+                android:id="@+id/menuOptionNumberType"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="8dp"
+                    android:gravity="center_vertical"
+                    android:textColor="#000"
+                    android:textSize="20sp"
+                    android:text="@string/menu_number_type"/>
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_alignParentRight="true"
+                    android:background="#f00"/>
+            </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
