--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,96 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawerLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zomaotoko.randomnumbers.MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <LinearLayout
             android:id="@+id/titleBar"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:orientation="horizontal"
             android:background="@color/colorTitleBar"
+            android:elevation="4dp"
             android:gravity="center_vertical"
-            android:elevation="4dp">
+            android:orientation="horizontal">
+
             <ImageButton
                 android:id="@+id/titleBarButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:background="#f00"
-                android:onClick="onTitleBarButtonClick"
-                />
+                android:onClick="onTitleBarButtonClick" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:layout_marginStart="4dp"
-                android:textSize="24sp"
-                android:textColor="#000"
                 android:fontFamily="sans-serif"
                 android:gravity="center_vertical"
-                android:text="@string/app_name"/>
+                android:text="@string/app_name"
+                android:textColor="#000"
+                android:textSize="24sp" />
         </LinearLayout>
 
-        <fragment
-            android:id="@+id/generateNumbersFragment"
-            class="com.zomaotoko.randomnumbers.GenerateNumberFragment"
+        <FrameLayout
+            android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            />
+            android:layout_gravity="start">
 
+            <fragment
+                android:id="@+id/generateNumbersFragment"
+                class="com.zomaotoko.randomnumbers.GenerateNumberFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </FrameLayout>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/menuLayout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:orientation="vertical"
-        android:background="@color/colorMenuDrawerBg">
+        android:background="@color/colorMenuDrawerBg"
+        android:orientation="vertical">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="48dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:gravity="center_vertical"
-            android:textColor="#000"
-            android:textSize="24sp"
             android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:paddingEnd="8dp"
+            android:paddingStart="8dp"
             android:text="@string/menu_title"
-            />
+            android:textColor="#000"
+            android:textSize="24sp" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="-1dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@android:color/darker_gray" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="48dp">
+
             <RelativeLayout
                 android:id="@+id/menuOptionNumberType"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp">
+                android:paddingEnd="8dp"
+                android:paddingStart="8dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
                     android:gravity="center_vertical"
+                    android:text="@string/menu_number_type"
                     android:textColor="#000"
-                    android:textSize="20sp"
-                    android:text="@string/menu_number_type"/>
+                    android:textSize="20sp" />
+
                 <ImageView
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:layout_alignParentRight="true"
-                    android:background="#f00"/>
+                    android:background="#f00" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
