--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,13 +39,13 @@
         </LinearLayout>
 
         <FrameLayout
-            android:id="@+id/fragmentContainer"
+            android:id="@+id/container_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="start">
 
             <fragment
-                android:id="@+id/generateNumbersFragment"
+                android:id="@+id/fragment_generate_number"
                 class="com.zomaotoko.randomnumbers.GenerateNumberFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
@@ -78,32 +78,29 @@
             android:background="@android:color/darker_gray" />
 
         <LinearLayout
+            android:id="@+id/menuOptionNumberType"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="48dp">
-
-            <RelativeLayout
-                android:id="@+id/menuOptionNumberType"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:paddingEnd="8dp"
-                android:paddingStart="8dp">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp">
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="8dp"
                     android:gravity="center_vertical"
                     android:text="@string/menu_number_type"
                     android:textColor="#000"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:layout_weight="1"/>
 
                 <ImageView
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_alignParentRight="true"
-                    android:background="#f00" />
-            </RelativeLayout>
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:background="@drawable/ic_settings" />
         </LinearLayout>
     </LinearLayout>
 
