--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,11 +20,13 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/titleBarButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:background="#f00"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:src="@drawable/ic_burger"
                 android:onClick="onTitleBarButtonClick" />
 
             <TextView
