--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,10 +24,10 @@
                 android:id="@+id/titleBarButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:paddingStart="8dp"
+                android:onClick="onTitleBarButtonClick"
                 android:paddingEnd="8dp"
-                android:src="@drawable/ic_burger"
-                android:onClick="onTitleBarButtonClick" />
+                android:paddingStart="8dp"
+                android:src="@drawable/ic_burger" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -61,49 +61,11 @@
         android:layout_gravity="start"
         android:background="@color/colorMenuDrawerBg"
         android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:fontFamily="sans-serif"
-            android:gravity="center_vertical"
-            android:paddingEnd="8dp"
-            android:paddingStart="8dp"
-            android:text="@string/menu_title"
-            android:textColor="#000"
-            android:textSize="24sp" />
-
-        <View
+        <fragment
+            android:id="@+id/_fragment_drawer_menu"
+            class="com.zomaotoko.randomnumbers.drawermenu.MenuFragment"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="-1dp"
-            android:background="@android:color/darker_gray" />
-
-        <LinearLayout
-            android:id="@+id/menuOptionNumberType"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="48dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp">
-
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="8dp"
-                    android:gravity="center_vertical"
-                    android:text="@string/menu_number_type"
-                    android:textColor="#000"
-                    android:textSize="20sp"
-                    android:layout_weight="1"/>
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/ic_settings" />
-        </LinearLayout>
+            android:layout_height="match_parent"
+            />
     </LinearLayout>
-
 </android.support.v4.widget.DrawerLayout>
