--- a/app/src/main/res/layout/layout_menu_item.xml
+++ b/app/src/main/res/layout/layout_menu_item.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:background="@android:color/white"
-    android:gravity="center_vertical"
     android:paddingStart="8dp"
     android:paddingEnd="8dp">
+
     <TextView
         android:id="@+id/itemLabel"
         android:layout_height="48dp"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        style="@style/MenuItem"
-        />
-    <ImageView
-        android:id="@+id/itemIcon"
-        android:layout_width="32dp"
-        android:layout_height="32dp" />
-</LinearLayout>
+        android:layout_width="wrap_content"
+        style="@style/MenuItem" />
+
+    <LinearLayout
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/itemIcon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center_vertical"
+            tools:ignore="ContentDescription" />
+    </LinearLayout>
+</RelativeLayout>
