--- a/app/src/main/res/layout/fragment_drawer_menu.xml
+++ b/app/src/main/res/layout/fragment_drawer_menu.xml
@@ -5,17 +5,30 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@android:color/white">
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:fontFamily="sans-serif"
-        android:gravity="center_vertical"
-        android:paddingEnd="8dp"
-        android:paddingStart="8dp"
-        android:text="@string/menu_title"
-        android:textColor="#000"
-        android:textSize="24sp"
-        android:elevation="24dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:src="@drawable/ic_large_arrow_back"
+            android:onClick="onCloseDrawer"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:fontFamily="sans-serif"
+            android:gravity="center_vertical"
+            android:paddingEnd="4dp"
+            android:paddingStart="4dp"
+            android:text="@string/menu_title"
+            android:textColor="#000"
+            android:textSize="24sp"
+            android:elevation="24dp"/>
+    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
