--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,46 +12,52 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/titleBar"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:background="@color/colorTitleBar"
-            android:elevation="4dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/titleBarButton"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:onClick="onTitleBarButtonClick"
-                android:paddingEnd="8dp"
-                android:paddingStart="8dp"
-                android:src="@drawable/ic_burger" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_marginStart="4dp"
-                android:fontFamily="sans-serif"
-                android:gravity="center_vertical"
-                android:text="@string/app_name"
-                android:textColor="#000"
-                android:textSize="24sp" />
-        </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/container_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start">
+            android:orientation="vertical">
 
-            <fragment
-                android:id="@+id/fragment_generate_number"
-                class="com.zomaotoko.randomnumbers.GenerateNumberFragment"
+            <LinearLayout
+                android:id="@+id/titleBar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </FrameLayout>
+                android:layout_height="48dp"
+                android:background="@color/colorTitleBar"
+                android:elevation="4dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/titleBarButton"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:onClick="onTitleBarButtonClick"
+                    android:paddingEnd="8dp"
+                    android:paddingStart="8dp"
+                    android:src="@drawable/ic_burger" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_marginStart="4dp"
+                    android:fontFamily="sans-serif"
+                    android:gravity="center_vertical"
+                    android:text="@string/app_name"
+                    android:textColor="#000"
+                    android:textSize="24sp" />
+            </LinearLayout>
+
+            <FrameLayout
+                android:id="@+id/container_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="start">
+
+                <fragment
+                    android:id="@+id/fragment_generate_number"
+                    class="com.zomaotoko.randomnumbers.GenerateNumberFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </FrameLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
