--- a/app/src/main/res/layout/fragment_generate_number.xml
+++ b/app/src/main/res/layout/fragment_generate_number.xml
@@ -4,27 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorFragmentBg">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center_horizontal">
+
         <TextView
             android:id="@+id/numberTxt"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="48dp"
-            android:gravity="center_vertical|center_horizontal"
+            android:gravity="center"
             android:elevation="2dp"
             android:fontFamily="sans-serif"
             android:textSize="24sp"
-            android:textColor="#000"
-            android:background="#FFFFFF"/>
+            android:textColor="@android:color/black"
+            android:background="@android:color/white"/>
+
         <Button
             android:id="@+id/generateNumberBtn"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginTop="40dp" />
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
