--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorTitleBar">#FFFFFF</color>
     <color name="colorFragmentBg">#F1F1F1</color>
     <color name="colorMenuDrawerBg">#FFFFFF</color>
+
+    <color name="colorIcon">#868686</color>
+    <color name="colorRadioGroupTitle">#565656</color>
 </resources>
