Add home option to menu
- Also, change slide out animation

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -2,6 +2,7 @@
 <resources>
     
     <array name="menu_icons">
+        <item>@drawable/ic_home</item>
         <item>@drawable/ic_settings</item>
     </array>
     
