--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -2,30 +2,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFragmentBg">
+    android:orientation="vertical"
+    android:background="@color/colorFragmentBg"
+    android:animateLayoutChanges="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="24dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:gravity="center"
-        android:background="@android:color/white"
-        android:elevation="2dp">
+        style="@style/ConfigLayout">
 
         <RadioGroup
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:padding="12dp"
-            android:background="@drawable/stroke_radio_group">
+            android:background="@drawable/stroke_config_group">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                style="@style/RadioGroupTitleTxt"
+                style="@style/ConfigGroupTitleTxt"
                 android:text="@string/label_number_type_title"/>
 
             <View
@@ -37,22 +33,107 @@
                 android:id="@+id/integerBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/RadioButtonsTxt"
+                style="@style/InnerConfigTxt"
                 android:text="@string/label_integer" />
 
             <RadioButton
                 android:id="@+id/doubleBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/RadioButtonsTxt"
+                style="@style/InnerConfigTxt"
                 android:text="@string/label_float" />
 
             <RadioButton
                 android:id="@+id/binaryBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/RadioButtonsTxt"
+                style="@style/InnerConfigTxt"
                 android:text="@string/label_binary"/>
         </RadioGroup>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/boundariesConfig"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/ConfigLayout">
+
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="12dp"
+            android:background="@drawable/stroke_config_group">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                style="@style/ConfigGroupTitleTxt"
+                android:text="@string/label_boundaries_title"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorIcon"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/InnerConfigTxt"
+                    android:gravity="center_horizontal"
+                    android:text="@string/label_lower_bound"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/InnerConfigTxt"
+                    android:gravity="center_horizontal"
+                    android:text="@string/label_upper_bound"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <EditText
+                        android:id="@+id/lowerBoundEdit"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <EditText
+                        android:id="@+id/upperBoundEdit"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textSize="18sp" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
