--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorFragmentBg"
-    android:animateLayoutChanges="true">
+    android:background="@color/colorFragmentBg">
 
     <LinearLayout
         android:layout_width="match_parent"
