--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,8 @@
 
     <!-- Background layout for configuration options -->
     <style name="ConfigLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@android:color/white</item>
         <item name="android:layout_marginTop">24dp</item>
         <item name="android:paddingTop">15dp</item>
@@ -25,14 +27,34 @@
         <item name="android:elevation">2dp</item>
     </style>
 
+    <!-- Rect into config layout -->
+    <style name="RectConfigLayout">
+        <item name="android:layout_width">300dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/stroke_config_group</item>
+        <item name="android:padding">12dp</item>
+    </style>
+
+    <!-- Divider into config rect -->
+    <style name="ConfigDivider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/colorIcon</item>
+    </style>
+
     <!-- Radio group title text view -->
     <style name="ConfigGroupTitleTxt">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">8dp</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/colorRadioGroupTitle</item>
     </style>
 
     <!-- Configuration's radio buttons -->
     <style name="InnerConfigTxt">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:textSize">18sp</item>
