--- a/app/src/main/res/layout/fragment_configuration.xml
+++ b/app/src/main/res/layout/fragment_configuration.xml
@@ -6,7 +6,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="24dp">
 
         <LinearLayout
             style="@style/ConfigLayout">
@@ -126,12 +127,18 @@
 
                 <View style="@style/ConfigDivider"/>
 
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/digitsSpinner"
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_gravity="center" />
+                <TextView
+                    android:id="@+id/digitsTxt"
+                    style="@style/InnerConfigTxt"
+                    android:layout_marginTop="8dp" />
+
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/seekBar"
+                    android:layout_width="match_parent"
+                    android:thumb="@drawable/ic_home"
+                    android:layout_height="25dp"
+                    android:background="@android:color/holo_blue_bright"
+                    android:layout_marginTop="8dp" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
