--- a/app/src/main/res/layout/fragment_generate_number.xml
+++ b/app/src/main/res/layout/fragment_generate_number.xml
@@ -3,30 +3,31 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorFragmentBg">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="48dp"
+    android:paddingBottom="48dp"
+    android:background="@color/colorFragmentBg"
+    android:clipToPadding="false">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/numberTxt"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:layout_height="48dp"
+        android:gravity="center"
+        android:elevation="2dp"
+        android:fontFamily="sans-serif"
+        android:textSize="24sp"
+        android:textColor="@android:color/black"
+        android:background="@android:color/white"/>
 
-        <TextView
-            android:id="@+id/numberTxt"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="48dp"
-            android:gravity="center"
-            android:elevation="2dp"
-            android:fontFamily="sans-serif"
-            android:textSize="24sp"
-            android:textColor="@android:color/black"
-            android:background="@android:color/white"/>
-
-        <Button
-            android:id="@+id/generateNumberBtn"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginTop="40dp" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/generateNumberBtn"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/button_generate"
+        android:elevation="4dp"
+        />
 </android.support.constraint.ConstraintLayout>
